# Optimization-models

./: README.md
Code/C#/: TSP_DFJ.cs  TSP_MTZ.cs  maximum_flow.cs  multiple_knapsack.cs
Code/C++/: BinPacking.cpp  TSP_DFJ.cpp  TSP_DFJ.h  TSP_MTZ.cpp  knapsack.cpp  maximum_flow.cpp  maximum_flow.h  multiple_knapsack.cpp  shortest_path.h
Code/Choco/: README.md
Code/Cplex/C#/: MinCostFlow.cs  TSP_DFJ.cs  bin_packing.cs  knapsack.cs  maximum_cliques.cs  maximum_flow.cs  shortest_path.cs
Code/Cplex/C++/: BinPacking.cpp  BinPacking.h  MinCostFlow.cpp  MinCostFlow.h  README.md  TSP.hpp  TSP_MTZ.h  bin_packing.hpp  knapsack.h  knapsack.hpp  maximum_flow.hpp  min_cost_flow.hpp  multiple_knapsack.h  multiple_knapsack.hpp  shortest_path.cpp  shortest_path.hpp
Code/Julia/: Edmonds_Karp_Algorithm.jl  gap.lp  generalized_assignment_problem.jl  maximum_flow.jl  my_Edmonds_Karp.jl  practice.jl  practice.lgz  practice.lp  read_data.jl  simple_example.jl  tsp.jl  tsp_function.jl
Code/Python/: BinPacking.ipynb  Matching.ipynb  SetCovering.ipynb  TSP-DFJ.ipynb  graph_coloring.ipynb  maximum_clique.ipynb
Code/SCIP/C++/: BinPacking  BinPacking.cpp  BinPacking.lp  CMakeCache.txt  CMakeLists.txt  MaxFlow.cpp  MaxFlow.lp  README.md  WyndorGlass  WyndorGlass.cpp  cmake_install.cmake
Code/SCIP/Python/: BinPacking.ipynb  MaximumFlow.ipynb  (+6 more)
Code/practice/: Makefile  MaxFlow  MaxFlow.lp  WyndorGlass.lp  installation.md
Code/utils/: gurobi_modeling.py  mip_modeling.py  scip_modeling.py
scripts/: MaximumFlow.ipynb  Multiple Knapsack.ipynb  ShortestPath.ipynb  knapsack.ipynb
